qt6/network/gen_qdnslookup.nim


proc fcQDnsDomainNameRecord_new(): ptr cQDnsDomainNameRecord {.importc: "QDnsDomainNameRecord_new".}
proc fcQDnsDomainNameRecord_new2(other: pointer): ptr cQDnsDomainNameRecord {.importc: "QDnsDomainNameRecord_new2".}
proc fcQDnsDomainNameRecord_operatorAssign(self: pointer, other: pointer): void {.importc: "QDnsDomainNameRecord_operatorAssign".}
proc fcQDnsDomainNameRecord_swap(self: pointer, other: pointer): void {.importc: "QDnsDomainNameRecord_swap".}
proc fcQDnsDomainNameRecord_name(self: pointer, ): struct_miqt_string {.importc: "QDnsDomainNameRecord_name".}
proc fcQDnsDomainNameRecord_timeToLive(self: pointer, ): cuint {.importc: "QDnsDomainNameRecord_timeToLive".}
proc fcQDnsDomainNameRecord_value(self: pointer, ): struct_miqt_string {.importc: "QDnsDomainNameRecord_value".}
proc fcQDnsDomainNameRecord_delete(self: pointer) {.importc: "QDnsDomainNameRecord_delete".}
proc fcQDnsHostAddressRecord_new(): ptr cQDnsHostAddressRecord {.importc: "QDnsHostAddressRecord_new".}
proc fcQDnsHostAddressRecord_new2(other: pointer): ptr cQDnsHostAddressRecord {.importc: "QDnsHostAddressRecord_new2".}
proc fcQDnsHostAddressRecord_operatorAssign(self: pointer, other: pointer): void {.importc: "QDnsHostAddressRecord_operatorAssign".}
proc fcQDnsHostAddressRecord_swap(self: pointer, other: pointer): void {.importc: "QDnsHostAddressRecord_swap".}
proc fcQDnsHostAddressRecord_name(self: pointer, ): struct_miqt_string {.importc: "QDnsHostAddressRecord_name".}
proc fcQDnsHostAddressRecord_timeToLive(self: pointer, ): cuint {.importc: "QDnsHostAddressRecord_timeToLive".}
proc fcQDnsHostAddressRecord_value(self: pointer, ): pointer {.importc: "QDnsHostAddressRecord_value".}
proc fcQDnsHostAddressRecord_delete(self: pointer) {.importc: "QDnsHostAddressRecord_delete".}
proc fcQDnsMailExchangeRecord_new(): ptr cQDnsMailExchangeRecord {.importc: "QDnsMailExchangeRecord_new".}
proc fcQDnsMailExchangeRecord_new2(other: pointer): ptr cQDnsMailExchangeRecord {.importc: "QDnsMailExchangeRecord_new2".}
proc fcQDnsMailExchangeRecord_operatorAssign(self: pointer, other: pointer): void {.importc: "QDnsMailExchangeRecord_operatorAssign".}
proc fcQDnsMailExchangeRecord_swap(self: pointer, other: pointer): void {.importc: "QDnsMailExchangeRecord_swap".}
proc fcQDnsMailExchangeRecord_exchange(self: pointer, ): struct_miqt_string {.importc: "QDnsMailExchangeRecord_exchange".}
proc fcQDnsMailExchangeRecord_name(self: pointer, ): struct_miqt_string {.importc: "QDnsMailExchangeRecord_name".}
proc fcQDnsMailExchangeRecord_preference(self: pointer, ): cushort {.importc: "QDnsMailExchangeRecord_preference".}
proc fcQDnsMailExchangeRecord_timeToLive(self: pointer, ): cuint {.importc: "QDnsMailExchangeRecord_timeToLive".}
proc fcQDnsMailExchangeRecord_delete(self: pointer) {.importc: "QDnsMailExchangeRecord_delete".}
proc fcQDnsServiceRecord_new(): ptr cQDnsServiceRecord {.importc: "QDnsServiceRecord_new".}
proc fcQDnsServiceRecord_new2(other: pointer): ptr cQDnsServiceRecord {.importc: "QDnsServiceRecord_new2".}
proc fcQDnsServiceRecord_operatorAssign(self: pointer, other: pointer): void {.importc: "QDnsServiceRecord_operatorAssign".}
proc fcQDnsServiceRecord_swap(self: pointer, other: pointer): void {.importc: "QDnsServiceRecord_swap".}
proc fcQDnsServiceRecord_name(self: pointer, ): struct_miqt_string {.importc: "QDnsServiceRecord_name".}
proc fcQDnsServiceRecord_port(self: pointer, ): cushort {.importc: "QDnsServiceRecord_port".}
proc fcQDnsServiceRecord_priority(self: pointer, ): cushort {.importc: "QDnsServiceRecord_priority".}
proc fcQDnsServiceRecord_target(self: pointer, ): struct_miqt_string {.importc: "QDnsServiceRecord_target".}
proc fcQDnsServiceRecord_timeToLive(self: pointer, ): cuint {.importc: "QDnsServiceRecord_timeToLive".}
proc fcQDnsServiceRecord_weight(self: pointer, ): cushort {.importc: "QDnsServiceRecord_weight".}
proc fcQDnsServiceRecord_delete(self: pointer) {.importc: "QDnsServiceRecord_delete".}
proc fcQDnsTextRecord_new(): ptr cQDnsTextRecord {.importc: "QDnsTextRecord_new".}
proc fcQDnsTextRecord_new2(other: pointer): ptr cQDnsTextRecord {.importc: "QDnsTextRecord_new2".}
proc fcQDnsTextRecord_operatorAssign(self: pointer, other: pointer): void {.importc: "QDnsTextRecord_operatorAssign".}
proc fcQDnsTextRecord_swap(self: pointer, other: pointer): void {.importc: "QDnsTextRecord_swap".}
proc fcQDnsTextRecord_name(self: pointer, ): struct_miqt_string {.importc: "QDnsTextRecord_name".}
proc fcQDnsTextRecord_timeToLive(self: pointer, ): cuint {.importc: "QDnsTextRecord_timeToLive".}
proc fcQDnsTextRecord_values(self: pointer, ): struct_miqt_array {.importc: "QDnsTextRecord_values".}
proc fcQDnsTextRecord_delete(self: pointer) {.importc: "QDnsTextRecord_delete".}
proc fcQDnsLookup_new(): ptr cQDnsLookup {.importc: "QDnsLookup_new".}
proc fcQDnsLookup_new2(typeVal: cint, name: struct_miqt_string): ptr cQDnsLookup {.importc: "QDnsLookup_new2".}
proc fcQDnsLookup_new3(typeVal: cint, name: struct_miqt_string, nameserver: pointer): ptr cQDnsLookup {.importc: "QDnsLookup_new3".}
proc fcQDnsLookup_new4(parent: pointer): ptr cQDnsLookup {.importc: "QDnsLookup_new4".}
proc fcQDnsLookup_new5(typeVal: cint, name: struct_miqt_string, parent: pointer): ptr cQDnsLookup {.importc: "QDnsLookup_new5".}
proc fcQDnsLookup_new6(typeVal: cint, name: struct_miqt_string, nameserver: pointer, parent: pointer): ptr cQDnsLookup {.importc: "QDnsLookup_new6".}
proc fcQDnsLookup_metaObject(self: pointer, ): pointer {.importc: "QDnsLookup_metaObject".}
proc fcQDnsLookup_metacast(self: pointer, param1: cstring): pointer {.importc: "QDnsLookup_metacast".}
proc fcQDnsLookup_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QDnsLookup_metacall".}
proc fcQDnsLookup_tr(s: cstring): struct_miqt_string {.importc: "QDnsLookup_tr".}
proc fcQDnsLookup_error(self: pointer, ): cint {.importc: "QDnsLookup_error".}
proc fcQDnsLookup_errorString(self: pointer, ): struct_miqt_string {.importc: "QDnsLookup_errorString".}
proc fcQDnsLookup_isFinished(self: pointer, ): bool {.importc: "QDnsLookup_isFinished".}
proc fcQDnsLookup_name(self: pointer, ): struct_miqt_string {.importc: "QDnsLookup_name".}
proc fcQDnsLookup_setName(self: pointer, name: struct_miqt_string): void {.importc: "QDnsLookup_setName".}
proc fcQDnsLookup_typeX(self: pointer, ): cint {.importc: "QDnsLookup_type".}
proc fcQDnsLookup_setType(self: pointer, typeVal: cint): void {.importc: "QDnsLookup_setType".}
proc fcQDnsLookup_nameserver(self: pointer, ): pointer {.importc: "QDnsLookup_nameserver".}
proc fcQDnsLookup_setNameserver(self: pointer, nameserver: pointer): void {.importc: "QDnsLookup_setNameserver".}
proc fcQDnsLookup_canonicalNameRecords(self: pointer, ): struct_miqt_array {.importc: "QDnsLookup_canonicalNameRecords".}
proc fcQDnsLookup_hostAddressRecords(self: pointer, ): struct_miqt_array {.importc: "QDnsLookup_hostAddressRecords".}
proc fcQDnsLookup_mailExchangeRecords(self: pointer, ): struct_miqt_array {.importc: "QDnsLookup_mailExchangeRecords".}
proc fcQDnsLookup_nameServerRecords(self: pointer, ): struct_miqt_array {.importc: "QDnsLookup_nameServerRecords".}
proc fcQDnsLookup_pointerRecords(self: pointer, ): struct_miqt_array {.importc: "QDnsLookup_pointerRecords".}
proc fcQDnsLookup_serviceRecords(self: pointer, ): struct_miqt_array {.importc: "QDnsLookup_serviceRecords".}
proc fcQDnsLookup_textRecords(self: pointer, ): struct_miqt_array {.importc: "QDnsLookup_textRecords".}
proc fcQDnsLookup_abort(self: pointer, ): void {.importc: "QDnsLookup_abort".}
proc fcQDnsLookup_lookup(self: pointer, ): void {.importc: "QDnsLookup_lookup".}
proc fcQDnsLookup_finished(self: pointer, ): void {.importc: "QDnsLookup_finished".}
proc fQDnsLookup_connect_finished(self: pointer, slot: int) {.importc: "QDnsLookup_connect_finished".}
proc fcQDnsLookup_nameChanged(self: pointer, name: struct_miqt_string): void {.importc: "QDnsLookup_nameChanged".}
proc fQDnsLookup_connect_nameChanged(self: pointer, slot: int) {.importc: "QDnsLookup_connect_nameChanged".}
proc fcQDnsLookup_typeChanged(self: pointer, typeVal: cint): void {.importc: "QDnsLookup_typeChanged".}
proc fQDnsLookup_connect_typeChanged(self: pointer, slot: int) {.importc: "QDnsLookup_connect_typeChanged".}
proc fcQDnsLookup_nameserverChanged(self: pointer, nameserver: pointer): void {.importc: "QDnsLookup_nameserverChanged".}
proc fQDnsLookup_connect_nameserverChanged(self: pointer, slot: int) {.importc: "QDnsLookup_connect_nameserverChanged".}
proc fcQDnsLookup_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QDnsLookup_tr2".}
proc fcQDnsLookup_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QDnsLookup_tr3".}
proc fQDnsLookup_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QDnsLookup_virtualbase_metacall".}
proc fcQDnsLookup_override_virtual_metacall(self: pointer, slot: int) {.importc: "QDnsLookup_override_virtual_metacall".}
proc fQDnsLookup_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QDnsLookup_virtualbase_event".}
proc fcQDnsLookup_override_virtual_event(self: pointer, slot: int) {.importc: "QDnsLookup_override_virtual_event".}
proc fQDnsLookup_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QDnsLookup_virtualbase_eventFilter".}
proc fcQDnsLookup_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QDnsLookup_override_virtual_eventFilter".}
proc fQDnsLookup_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QDnsLookup_virtualbase_timerEvent".}
proc fcQDnsLookup_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QDnsLookup_override_virtual_timerEvent".}
proc fQDnsLookup_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QDnsLookup_virtualbase_childEvent".}
proc fcQDnsLookup_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QDnsLookup_override_virtual_childEvent".}
proc fQDnsLookup_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QDnsLookup_virtualbase_customEvent".}
proc fcQDnsLookup_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QDnsLookup_override_virtual_customEvent".}
proc fQDnsLookup_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QDnsLookup_virtualbase_connectNotify".}
proc fcQDnsLookup_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QDnsLookup_override_virtual_connectNotify".}
proc fQDnsLookup_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QDnsLookup_virtualbase_disconnectNotify".}
proc fcQDnsLookup_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QDnsLookup_override_virtual_disconnectNotify".}
proc fcQDnsLookup_staticMetaObject(): pointer {.importc: "QDnsLookup_staticMetaObject".}
proc fcQDnsLookup_delete(self: pointer) {.importc: "QDnsLookup_delete".}


func init*(T: type QDnsDomainNameRecord, h: ptr cQDnsDomainNameRecord): QDnsDomainNameRecord =
  T(h: h)
proc create*(T: type QDnsDomainNameRecord, ): QDnsDomainNameRecord =

  QDnsDomainNameRecord.init(fcQDnsDomainNameRecord_new())
proc create*(T: type QDnsDomainNameRecord, other: QDnsDomainNameRecord): QDnsDomainNameRecord =

  QDnsDomainNameRecord.init(fcQDnsDomainNameRecord_new2(other.h))
proc operatorAssign*(self: QDnsDomainNameRecord, other: QDnsDomainNameRecord): void =

  fcQDnsDomainNameRecord_operatorAssign(self.h, other.h)

proc swap*(self: QDnsDomainNameRecord, other: QDnsDomainNameRecord): void =

  fcQDnsDomainNameRecord_swap(self.h, other.h)

proc name*(self: QDnsDomainNameRecord, ): string =

  let v_ms = fcQDnsDomainNameRecord_name(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc timeToLive*(self: QDnsDomainNameRecord, ): cuint =

  fcQDnsDomainNameRecord_timeToLive(self.h)

proc value*(self: QDnsDomainNameRecord, ): string =
